--- a/Notepad/230307_web.md
+++ b/Notepad/230307_web.md
@@ -1,8 +1,7 @@
 # 230307 Web
-```
-프로젝트 할 때 본인이 하고 있는 일을 숨기지 마라.
 
-```
+**프로젝트 할 때 본인이 하고 있는 일을 숨기지 마라.**
+
 - 정규식 때 했던 메타문자(본래 문자가 가진 뜻이 아닌 특별한 용도로 사용하는 문자)
 - 메타 데이터는 눈에 보이는 데이터 값이 아닌 다른 것을 지칭하는 데이터를 의미함.
 - html은 커다란 문서이기 때문에 DOM(Document Object Model)의 구조를 가지고 있음.
@@ -20,7 +19,7 @@ title 속성 > tool tip // 설명란
 단락(Paragraph) : <p></p>
 <br> : break line 줄바꿈, 내려쓰기
 <pre></pre> (preformatted text) : 텍스트 그대로
-<hr> : Hou
+<hr> : Houhorizontal rule : 한줄 긋기
 <q></q> : 짧은 인용구 앞뒤로 작은 따옴표
 <!--주석-->
 ```
