--- a/Notepad/230308_web.md
+++ b/Notepad/230308_web.md
@@ -27,6 +27,7 @@ CSS 또한 표준안이 존재함.
 ; : 선언구분자
 
 선택자(selector)
+    기본 선택자 : 요소,id,class,그룹
     자손 선택자 : 자식의 자식
     자식 선택자 : 자식
     동위 선택자 : 동일 태그 안에 나란히 있는 형제
