--- a/Notepad/0313/230313_web.md
+++ b/Notepad/0313/230313_web.md
@@ -30,17 +30,19 @@
 ```
 .flex_container{display : flex;}
 ```
+
 ```
 부모 속성
 flex-direction, flex-wrap, justify-content, align-items, align-content
 ```
+
 > flex는 메인 방향(main-axis)이 중요함.  
 
 > 배치방향 설정(flex-direction) : row, row-reverse, column, column-reverse  
 
 > 줄넘김 처리(flex-wrap) : 컨테이너가 더 이상 아이템들을 한줄에 담을 여유공간이 없을 때 아이템 줄바꿈을 어떻게 할지 결정하는 속성  
 
-> flex-flow 는 flex-direction 과 flex-wrap을 축약하여 사용
+> flex-flow 는 flex-direction 과 flex-wrap을 축약하여 사용  
 
 > 메인축 정렬(justify-content)
 
@@ -53,3 +55,21 @@ flex-direction, flex-wrap, justify-content, align-items, align-content
 ## 레이아웃 모델 grid
 ---
 2차원 구성의 레이아웃 모델
+```
+.grid_container{display : grid;}
+```
+### grid 형태의 정의
+- grid-template-rows : 행의 배치
+- grid-template-columns : 열의 배치
+
+### 간격 만들기
+- row-gap : 행 간격
+- column-gap : 열 간격
+- gap : 행렬의 간격 축약
+- grid-gap 0 0 : 첫번째 값은 행사이의 간격 두번째 값은 열 사이의 간격 
+- grid-row-gap : 
+- grid-column-gap : 
+
+### 배치
+- order : 배치순서; 숫자가 작을수록 먼저 배치
+- z-index : z축 배치 순서; 숫자가 클수록 위로
