Learn to jquery

--- a/Notepad/0316/230316.md
+++ b/Notepad/0316/230316.md
@@ -68,14 +68,29 @@ window : 현재 브라우저 창 또는 탭
 ---
 ```javascript
     document.write('href:'+location.href,'<br>'); //
-    document.write('hostname:'+location.hostname,'<br>');
-    document.write('host:'+location.host,'<br>');
-    document.write('protocol:'+location.protocol,'<br>');
-    document.write('search:'+location.search,'<br>');
+    document.write('hostname:'+location.hostname,'<br>'); //
+    document.write('host:'+location.host,'<br>'); //
+    document.write('protocol:'+location.protocol,'<br>'); //
+    document.write('search:'+location.search,'<br>'); //
     function wreload(){
         location.reload(); //새로고침
     }
 ```
+
+## navigator 객체
+---
+> 객체 브라우저 정보와 운영체제의 정보
+```javascript
+      document.write("appCodeName:"+navigator.appCodeName,"<br>");
+      document.write("appName:"+navigator.appName,"<br>");
+      document.write("appVersion:"+navigator.appVersion,"<br>");
+      document.write("language:"+navigator.language,"<br>");
+      document.write("product:"+navigator.product,"<br>");
+      document.write("platform:"+navigator.platform,"<br>");
+      document.write("userAgent:"+navigator.userAgent,"<br>");
+```
+
+## s
 
 ## 출력
 ---
